--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>eex</title
+		<title>VK: Talk for Embedded Enterprise Exchange - 2013-03-26</title
 
-		<meta name="description" content=Reveal file created using md2reveal.py>
-		<meta name="author" content=VK>
+		<meta name="description" content=Slides for a talk I'm giving at the Embedded Enterprise exchange held in Cardiff on 2013-03-26>
+		<meta name="author" content=Dr Vincent Knight>
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -36,17 +36,19 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-<section align=center data-markdown>### Embedded Enterprise in Mathematics
+<section align=center>
+<h2>Embedded Enterprise in Mathematics</h2>
+<h3>Dr Vincent Knight</h3>
 
 </section><section align=center data-markdown>
 
-<img src='./Images/board.jpg' style="border:none;" >
+<img src='./Images/board.jpg' style="border:none;max-height:50%;" >
 
 </section><section align=center data-markdown>### _Should a modern mathematician be a coder?_
 
 </section><section align=center data-markdown>
 
-<img src='./Images/plan.png' style="border:none;" >
+<img src='./Images/plan.png' style="border:none;max-height:50%;" >
 
 </section><section align=center data-markdown>
 
@@ -64,7 +66,7 @@
 
 </section><section align=center>
 
-<img src='./Images/darts.gif' style="border:none;" >
+<img src='./Images/darts.gif' style="border:none;max-height:50%;" >
 
 </section><section align=left data-markdown>
 
@@ -78,17 +80,17 @@
 
 </section><section align=center data-markdown>
 
-<img src='./Images/skills.svg' style="border:none;" >
+<img src='./Images/skills.svg' style="border:none;max-height:50%;" >
 
 </section><section align=center data-markdown>
 
-<img src='https://lh4.googleusercontent.com/-agZurKM08gk/UvNxDSb1ZWI/AAAAAAAA-1I/Foi4Pl_vT_M/w1180-h885-no/IMG_20140206_112453.jpg' style="border:none;" >
+<img src='https://lh4.googleusercontent.com/-agZurKM08gk/UvNxDSb1ZWI/AAAAAAAA-1I/Foi4Pl_vT_M/w1180-h885-no/IMG_20140206_112453.jpg' style="border:none;max-height:50%;" >
 
 </section>
 
 
 <section>
-<img src='https://lh3.googleusercontent.com/-2kSrcDRI8cw/UvN6W36CxwI/AAAAAAAA-0w/5bOPkQm8rbY/w630-h840-no/IMG_20140206_120431.jpg' style="border:none;" >
+<img src='https://lh3.googleusercontent.com/-2kSrcDRI8cw/UvN6W36CxwI/AAAAAAAA-0w/5bOPkQm8rbY/w630-h840-no/IMG_20140206_120431.jpg' style="border:none;max-height:50%;" >
 </section>
 
 <section>
@@ -110,7 +112,7 @@
 
 <section align=center data-markdown>### Week 7-10: Seminars
 
-<img src='https://lh6.googleusercontent.com/-cn86i5PQKxY/UyGMa6fhefI/AAAAAAABDSo/MhbIvHK30vk/w630-h473-no/IMG_20140313_082329.jpg' style="border:none;" >
+<img src='https://lh6.googleusercontent.com/-cn86i5PQKxY/UyGMa6fhefI/AAAAAAABDSo/MhbIvHK30vk/w630-h473-no/IMG_20140313_082329.jpg' style="border:none;max-height:50%;" >
 
 </section>
 
@@ -127,7 +129,7 @@ _3 pages: 30 % of total mark_
 
 <section align=center data-markdown>### Week 6: Lightning Talks
 
-<img src='https://lh5.googleusercontent.com/-T2KfRLRq2Q8/Uxhcl_RbBuI/AAAAAAAAknI/zY49IOlb_Ng/w1598-h848-no/IMG_3954.JPG' style="border:none;" >
+<img src='https://lh5.googleusercontent.com/-T2KfRLRq2Q8/Uxhcl_RbBuI/AAAAAAAAknI/zY49IOlb_Ng/w1598-h848-no/IMG_3954.JPG' style="border:none;max-height:50%;" >
 
 </section>
 
@@ -138,7 +140,7 @@ _3 pages: 30 % of total mark_
 <ul>
 <li>Teaching.</li>
 <li>Sharing a taxi fair.</li>
-<li><a href='http://thefightclub.herokuapp.com/' target='_blank'>The Fight Club</a></li>
+<li><a href='http://thefightclub.herokuapp.com/' target='_blank'>The Fight Club</a>.</li>
 </ul>
 </section>
 
@@ -149,6 +151,10 @@ _3 pages: 30 % of total mark_
 [+VincentKnight](https://plus.google.com/+VincentKnight/)
 
 [@drvinceknight](https://twitter.com/drvinceknight)
+
+[knightva@cf.ac.uk](mailto:knightva@cf.ac.uk)
+
+[github.com/drvinceknight/](https://github.com/drvinceknight/)
 </section>
 			</div>
 
