--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 
 <p>I have nothing to put on my CV!</p>
 
-<p>Send help and food,</p>
+<p>Please send help and food,</p>
+
+<p>Sincerely,</p>
 <p>3rd Year Tutee</p></blockquote>
 
 </section><section align=center data-markdown>
