Moved slides about companies

--- a/index.html
+++ b/index.html
@@ -95,12 +95,7 @@
 <section>
 <img src='https://lh3.googleusercontent.com/-2kSrcDRI8cw/UvN6W36CxwI/AAAAAAAA-0w/5bOPkQm8rbY/w630-h840-no/IMG_20140206_120431.jpg' style="border:none;max-height:50%;" >
 </section>
-
 <section>
-
-<h2>Companies</h2>
-
-</section><section>
 
 <ul>
 <li> Week 1: Introductory Lecture</li>
@@ -119,6 +114,11 @@
 
 </section>
 
+<section>
+
+<h2>Companies</h2>
+
+</section>
 
 <section>
 <h2>Assessment</h2>
