Added marking criteria

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <section align=center data-markdown>### Week 3: Project Report
 
-_3 pages: 30 % of total mark_
+_2 pages: 30 % of total mark_
 
 </section>
 
@@ -137,6 +137,9 @@ _3 pages: 30 % of total mark_
 </section>
 
 <section align=center data-markdown>### Week 11: Final Presentations
+
+_25 minutes: 70 % of total mark_
+
 </section>
 
 <section>
