--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@
 <section align=center>
 <h2>Embedded Enterprise in Mathematics</h2>
 <h3>Dr Vincent Knight</h3>
+</section>
 
-</section><section align=center data-markdown>
+<section align=center>
+<h2>Background</h2>
+</section>
+
+<section>
+<section align=center data-markdown>
 
 <img src='./Images/board.jpg' style="border:none;max-height:50%;" >
 
@@ -85,7 +91,17 @@
 
 <img src='./Images/skills.svg' style="border:none;max-height:50%;" >
 
-</section><section align=center data-markdown>
+</section>
+
+</section>
+
+<section align=center>
+<h2>Enterprise</h2>
+</section>
+
+
+<section>
+<section align=center data-markdown>
 
 <img src='https://lh4.googleusercontent.com/-agZurKM08gk/UvNxDSb1ZWI/AAAAAAAA-1I/Foi4Pl_vT_M/w1180-h885-no/IMG_20140206_112453.jpg' style="border:none;max-height:50%;" >
 
@@ -119,11 +135,13 @@
 <h2>Companies</h2>
 
 </section>
+</section>
 
 <section>
 <h2>Assessment</h2>
 </section>
 
+<section>
 <section align=center data-markdown>### Week 3: Project Report
 
 _2 pages: 30 % of total mark_
@@ -141,7 +159,13 @@ _2 pages: 30 % of total mark_
 _25 minutes: 70 % of total mark_
 
 </section>
+</section>
 
+<section>
+<h2>Conclusion</h2>
+</section>
+
+<section>
 <section>
 <ul>
 <li>Teaching.</li>
@@ -161,6 +185,7 @@ _25 minutes: 70 % of total mark_
 [knightva@cf.ac.uk](mailto:knightva@cf.ac.uk)
 
 [github.com/drvinceknight/](https://github.com/drvinceknight/)
+</section>
 </section>
 			</div>
 
