added last slide

--- a/index.html
+++ b/index.html
@@ -166,6 +166,13 @@ _25 minutes: 70 % of total mark_
 </section>
 
 <section>
+
+<section align=center data-markdown>
+
+<img src='./Images/conclusion.svg' style="border:none;max-height:50%;" >
+
+</section>
+
 <section>
 <ul>
 <li>Teaching.</li>
