--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>VK: Talk for Embedded Enterprise Exchange - 2013-03-26</title
+		<title>VK: Talk for Embedded Enterprise Exchange - 2013-03-26</title>
+
+        <meta name="keywords" content="Computing for Mathematics, Programming, Mathematics, Python, Fight Club, Embedded Enterprise Exchange ">
+
 
 		<meta name="description" content=Slides for a talk I'm giving at the Embedded Enterprise exchange held in Cardiff on 2013-03-26>
 		<meta name="author" content=Dr Vincent Knight>
